--- a/typing-learner/package.json
+++ b/typing-learner/package.json
@@ -26,7 +26,9 @@
     "globals": "^16.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+
+    "gh-pages": "^6.3.0"
   },
   "homepage": "https://github.com/BrandonYUYU/english-typing-learner"
 }
