--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
 
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://github.com/BrandonYUYU/Typing-App"
+  "homepage": "https://brandonyuyu.github.io/Typing-App/"
 }
